--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4
+      - uses: coursier/cache-action@v6
+      - uses: olafurpg/setup-scala@v14
         with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: 'sbt'
+          java-version: openjdk@1.17.0
       - name: Run tests
         run: sbt test
