--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Code Verification
 
 on:
   pull_request:
@@ -9,7 +9,6 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -20,3 +19,17 @@ jobs:
           java-version: openjdk@1.17.0
       - name: Run tests
         run: sbt test
+
+  lint:
+    runs-on:
+      labels: ubuntu-latest-8-cores
+    steps:
+      - uses: actions/checkout@v4
+      - uses: coursier/cache-action@v6
+      - uses: olafurpg/setup-scala@v14
+        with:
+          java-version: openjdk@1.17.0
+      - name: Check licenses
+        run: sbt licenseCheck
+      - name: Lint code
+        run: sbt scalafmtCheckAll scalafmtSbtCheck
