--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
 
   compile:
     runs-on: ubuntu-latest
+    needs: branch-naming
 
     steps:
       - uses: actions/checkout@v4
@@ -37,6 +38,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    needs: compile
 
     steps:
       - uses: actions/checkout@v4
@@ -48,8 +50,9 @@ jobs:
         run: sbt testOnly mexmath.foundation.${{github.head_ref//-/}}.*
 
   lint:
-    runs-on:
-      labels: ubuntu-latest
+    runs-on: ubuntu-latest
+    needs: compile
+
     steps:
       - uses: actions/checkout@v4
       - uses: coursier/cache-action@v6
