--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,37 +8,37 @@ permissions:
   contents: read
 
 jobs:
-  branch-naming:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checking branch naming convension
-        run: |
-          if [[ ${{ github.head_ref }} =~ ^week-[0-9]+$ ]]; then
-            echo "Naming convention check for $GITHUB_HEAD_REF branch is passed successfully"
-          else
-            echo "Naming convention is failed for $GITHUB_HEAD_REF branch."
-            exit 1
-          fi
-
-  compile:
-    runs-on: ubuntu-latest
-    needs: branch-naming
-
-    steps:
-      - uses: actions/checkout@v4
-      - uses: coursier/cache-action@v6
-      - uses: olafurpg/setup-scala@v14
-        with:
-          java-version: openjdk@1.17.0
-      - name: Compile main
-        run: sbt clean compile
-      - name: Compile test
-        run: sbt test:compile
+#  branch-naming:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checking branch naming convension
+#        run: |
+#          if [[ ${{ github.head_ref }} =~ ^week-[0-9]+$ ]]; then
+#            echo "Naming convention check for $GITHUB_HEAD_REF branch is passed successfully"
+#          else
+#            echo "Naming convention is failed for $GITHUB_HEAD_REF branch."
+#            exit 1
+#          fi
+#
+#  compile:
+#    runs-on: ubuntu-latest
+#    needs: branch-naming
+#
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: coursier/cache-action@v6
+#      - uses: olafurpg/setup-scala@v14
+#        with:
+#          java-version: openjdk@1.17.0
+#      - name: Compile main
+#        run: sbt clean compile
+#      - name: Compile test
+#        run: sbt test:compile
 
   test:
     runs-on: ubuntu-latest
-    needs: compile
+#    needs: compile
 
     steps:
       - uses: actions/checkout@v4
@@ -47,10 +47,7 @@ jobs:
         with:
           java-version: openjdk@1.17.0
       - name: Run tests
-        run: |
-          local branch_name = ${{github.head_ref}}
-          local package_name = "${branch_name//-/}"
-          sbt testOnly mexmath.foundation.${package_name}.*
+        run: sbt testOnly mexmath.foundation."${${{github.head_ref}}//-/}".*
 
   lint:
     runs-on: ubuntu-latest
