--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,10 @@ jobs:
         with:
           java-version: openjdk@1.17.0
       - name: Run tests
-        run: sbt testOnly mexmath.foundation."${${{github.head_ref}}//-/}".*
-
+        run: |
+          local input="Hello"
+          sbt testOnly mexmath.foundation.42.*
+# "${${{github.head_ref}}//-/}"
   lint:
     runs-on: ubuntu-latest
     needs: compile
