--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
 
   compile:
     runs-on: ubuntu-latest
+    needs: branch-naming
 
     steps:
       - uses: actions/checkout@v4
@@ -37,6 +38,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    needs: compile
 
     steps:
       - uses: actions/checkout@v4
@@ -45,11 +47,12 @@ jobs:
         with:
           java-version: openjdk@1.17.0
       - name: Run tests
-        run: sbt testOnly mexmath.foundation.$GITHUB_HEAD_REF.*
+        run: sbt "testOnly $(echo "mexmath.foundation.${{github.head_ref}}.homework.*" | sed 's/-//g')"
 
   lint:
-    runs-on:
-      labels: ubuntu-latest
+    runs-on: ubuntu-latest
+    needs: compile
+
     steps:
       - uses: actions/checkout@v4
       - uses: coursier/cache-action@v6
